feat(2.0): 代码优化后增加vitepress

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,9 +1,10 @@
-*.sh
-node_modules
-logs
+.DS_Store
+.idea
+.vscode
+
 dist
+logs
 coverage
-LICENSE
-README.md
-pnpm-lock.yaml
-.npmrc
+node_modules
+
+!docs/.vitepress/
