--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cross-spawn": "^7.0.6",
     "debug": "^4.4.0",
     "geometry-fns": "^1.0.2",
+    "konva": "^9.3.20",
     "markdown-it-mathjax3": "^4.3.2",
     "undici": "^7.8.0",
     "vitepress": "^2.0.0-alpha.5",
