--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,8 +36,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20  # 指定 Node.js 版本
-      - run: npm run clean
-      - run: npm i
+      - run: npm run deps
       - run: npm run docs:build   # 执行构建命令（生成 dist/ 目录）
         env:
           BASE_URL: ${{ env.base_url }}
