--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,6 +36,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20  # 指定 Node.js 版本
+      - name: 配置pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
       - run: npm run deps
       - run: npm run docs:build   # 执行构建命令（生成 dist/ 目录）
         env:
